# Musicial

./: .Makefile.swp  .gitignore  CMakeLists.txt  Client.h  Client.pro  CustomWidgets.cpp  CustomWidgets.h  MainWindow.cpp  README.md  api.cpp  api.h  apiConvertHandlers.h  apiSpotify.cpp  apiSpotify.h  apiYoutube.cpp  apiYoutube.h  bd.h  build.sh  configs.h  db.h  init.sh  main.cpp  playlistcreator.cpp  teammates_classes.h  tests.cpp
.github/workflows/: ci.yml
copy/: CMakeLists.txt  mainlib.h
lib/: mainlib.cpp  mainlib.h
linters/: run.sh
project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
project/api/: CMakeLists.txt  Makefile  cmake_install.cmake  st.bash
project/api/include/: api.h  apiConvertHandlers.h  apiSpotify.h  apiYoutube.h
project/api/src/: CMakeLists.txt  api.cpp  apiSpotify.cpp  apiYoutube.cpp  main.cpp  mainnn.cpp
project/api/test/: tests.cpp
project/builtLibs/: CMakeCache.txt  CMakeLists.txt  Makefile  asd.cpp  cmake_install.cmake  st.bash
project/builtLibs/api/: Makefile  cmake_install.cmake
project/builtLibs/db/: Makefile  cmake_install.cmake
project/builtLibs/qt/lib/: Makefile  QT_test  cmake_install.cmake
project/builtLibs/qt/lib/src/: Makefile  cmake_install.cmake
project/builtLibs/web/: Makefile  cmake_install.cmake  run_tests
project/builtLibs/web/project/server/: Makefile  server
project/db/: CMakeLists.txt  Client.h  Makefile  cmake_install.cmake  db.cpp  teammates_classes.h
project/include/: Network.h
project/qt/: Client.pro  CustomWidgets.cpp  CustomWidgets.h  MainWindow.cpp  MainWindow.h  main.cpp  playlistcreator.cpp  playlistcreator.h
project/qt/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  st.bash
project/qt/lib/include/: mainlib.h  tem.h
project/qt/lib/src/: CMakeLists.txt  Makefile  cmake_install.cmake  mainlib.cpp
project/qt/lib/test/: CMakeLists.txt  test.cpp
project/server/: CMakeLists.txt  Makefile  client  cmake_install.cmake  server
project/server/include/: client_tools.h  net_tools.h  server_tools.h
project/server/src/: client.cpp  connection.cpp  net_tools.cpp  server.cpp  server_tools.cpp
project/src/: main.cpp
project/web/: CMakeCache.txt  CMakeLists.txt  Makefile  client  cmake_install.cmake  run_tests  server  st.bash
project/web/include/: client.h  client_tools.h  connection.h  net_tools.h  request.h  response.h  router.h  server_tools.h  shared_lib.h
project/web/project/server/: CMakeCache.txt  CMakeLists.txt  Makefile  client  server
project/web/project/server/include/: client.h  client_tools.h  connection.h  net_tools.h  request.h  response.h  router.h  server_tools.h
project/web/project/server/src/: client.cpp  connection.cpp  net_tools.cpp  server.cpp  server_tools.cpp
project/web/src/: client.cpp  connection.cpp  net_tools.cpp  server.cpp  server_tools.cpp
project/web/tests/: network_tests.cpp
qt/: Client.pro  CustomWidgets.cpp  CustomWidgets.h  MainWindow.cpp  MainWindow.h  main.cpp  playlistcreator.cpp  playlistcreator.h
qt/lib/: CMakeLists.txt  mainlib.cpp  mainlib.h  shared.cpp  shared_lib.h  st.bash  test.cpp
qt/lib/include/: mainlib.h  shared_lib.h
qt/lib/linters/: run.sh
qt/lib/src/: mainlib.cpp
qt/lib/test/: test.cpp
qt/linters/: run.sh
src/: test.sh  val_test.sh
tests/: network_tests.cpp
